[gd_scene load_steps=60 format=2]

[ext_resource path="res://Themes/Main.tres" type="Theme" id=1]
[ext_resource path="res://Themes/StyleBoxes/ShadowStyleBox.tres" type="StyleBox" id=2]
[ext_resource path="res://Assets/Mixed/Backgrounds/SchoolBackground1920x1080_v1.png" type="Texture" id=3]
[ext_resource path="res://Scenes/MultiplayerInterface/MultiplayerInterface.gd" type="Script" id=4]
[ext_resource path="res://Managers/Mood/MoodManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://Managers/Levels/LevelManager.tscn" type="PackedScene" id=6]
[ext_resource path="res://Resources/Levels/StoryLevel/IntroLevel.tres" type="Resource" id=7]
[ext_resource path="res://Resources/Levels/StoryLevel/EndingLevel.tres" type="Resource" id=8]
[ext_resource path="res://Resources/Levels/Level17/Cafeteria.tres" type="Resource" id=9]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level10/Level10List.tres" type="Resource" id=10]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level22/Level22List.tres" type="Resource" id=11]
[ext_resource path="res://Resources/Definitions/ToxinDefinition.tres" type="Resource" id=12]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level04/Level04List.tres" type="Resource" id=13]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level01/Level01List.tres" type="Resource" id=14]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level14/Level14List.tres" type="Resource" id=15]
[ext_resource path="res://Resources/Levels/ShelterLevel/ShelterLevel.tres" type="Resource" id=16]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level02/Level02List.tres" type="Resource" id=17]
[ext_resource path="res://Resources/Levels/StoryLevel/PreBossLevel.tres" type="Resource" id=18]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level13/Level13List.tres" type="Resource" id=19]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level08/Level08List.tres" type="Resource" id=20]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level11/Level11List.tres" type="Resource" id=21]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level07/Level07List.tres" type="Resource" id=22]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level16/Level16List.tres" type="Resource" id=23]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level17/Level17List.tres" type="Resource" id=24]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level05/Level05List.tres" type="Resource" id=25]
[ext_resource path="res://Resources/Definitions/DefenseDefinition.tres" type="Resource" id=26]
[ext_resource path="res://Resources/Levels/StoryLevel/CongratsLevel.tres" type="Resource" id=27]
[ext_resource path="res://Resources/Definitions/EnGardeDefinition.tres" type="Resource" id=28]
[ext_resource path="res://Resources/Definitions/AttackDefinition.tres" type="Resource" id=29]
[ext_resource path="res://Resources/Definitions/VenomousDefinition.tres" type="Resource" id=30]
[ext_resource path="res://Resources/Definitions/FortitudeDefinition.tres" type="Resource" id=31]
[ext_resource path="res://Resources/Definitions/GainEnergyDefinition.tres" type="Resource" id=32]
[ext_resource path="res://Resources/Definitions/UnplayableDefinition.tres" type="Resource" id=33]
[ext_resource path="res://Resources/Definitions/RetainDefinition.tres" type="Resource" id=34]
[ext_resource path="res://Resources/Definitions/InnateDefinition.tres" type="Resource" id=35]
[ext_resource path="res://Resources/Definitions/ExhaustDefinition.tres" type="Resource" id=36]
[ext_resource path="res://Resources/Definitions/OpenerDefinition.tres" type="Resource" id=37]
[ext_resource path="res://Resources/Definitions/VulnerableDefinition.tres" type="Resource" id=38]
[ext_resource path="res://Resources/Definitions/FocusDefinition.tres" type="Resource" id=39]
[ext_resource path="res://Resources/Definitions/FortifyDefinition.tres" type="Resource" id=40]
[ext_resource path="res://Resources/Definitions/RicochetDefinition.tres" type="Resource" id=41]
[ext_resource path="res://Resources/Definitions/DefenseUpDefinition.tres" type="Resource" id=42]
[ext_resource path="res://Resources/Definitions/MomentaryDefinition.tres" type="Resource" id=43]
[ext_resource path="res://Resources/Definitions/WeakDefinition.tres" type="Resource" id=44]
[ext_resource path="res://Resources/Definitions/FragileDefinition.tres" type="Resource" id=45]
[ext_resource path="res://Resources/Definitions/StrengthDefinition.tres" type="Resource" id=46]
[ext_resource path="res://Resources/Definitions/AttackUpDefinition.tres" type="Resource" id=47]
[ext_resource path="res://Resources/Definitions/LoseEnergyDefinition.tres" type="Resource" id=48]
[ext_resource path="res://Resources/Levels/CreditsLevel/CreditsLevel.tres" type="Resource" id=49]
[ext_resource path="res://Assets/Sourced/Music/SoundImage/Comrades-Always.ogg" type="AudioStream" id=50]
[ext_resource path="res://Assets/Sourced/Music/OfFarDifferentNature/Of Far Different Nature - Adventure Begins (CC-BY).ogg" type="AudioStream" id=51]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level25/Level25List.tres" type="Resource" id=52]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level28/Level28List.tres" type="Resource" id=53]
[ext_resource path="res://Assets/Sourced/Music/SoundImage/RPG-Battle-Climax.ogg" type="AudioStream" id=54]
[ext_resource path="res://Assets/Sourced/Music/OfFarDifferentNature/Of Far Different Nature - Ganxta (CC-BY).ogg" type="AudioStream" id=55]
[ext_resource path="res://Assets/Sourced/Music/SoundImage/Into-Battle_v001.ogg" type="AudioStream" id=56]
[ext_resource path="res://Scenes/DeadPanel/DeadPanel.tscn" type="PackedScene" id=57]
[ext_resource path="res://Managers/Tooltip/TooltipManager.tscn" type="PackedScene" id=58]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.533333, 0.364706, 0.513726, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="MultiplayerInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleInterfaceContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShadowPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeadPanel" parent="." instance=ExtResource( 57 )]
visible = false
mouse_filter = 2

[node name="CampaignInterfaceContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckViewContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TooltipManager" parent="." instance=ExtResource( 58 )]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
term_definitions = [ ExtResource( 29 ), ExtResource( 47 ), ExtResource( 26 ), ExtResource( 42 ), ExtResource( 28 ), ExtResource( 36 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 31 ), ExtResource( 45 ), ExtResource( 32 ), ExtResource( 35 ), ExtResource( 43 ), ExtResource( 37 ), ExtResource( 34 ), ExtResource( 41 ), ExtResource( 46 ), ExtResource( 12 ), ExtResource( 33 ), ExtResource( 30 ), ExtResource( 38 ), ExtResource( 44 ), ExtResource( 48 ) ]

[node name="LevelManager" parent="." instance=ExtResource( 6 )]
levels = [ ExtResource( 7 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 25 ), ExtResource( 16 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 16 ), ExtResource( 10 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 23 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 24 ), ExtResource( 8 ), ExtResource( 49 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 11 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 52 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 53 ), ExtResource( 27 ), ExtResource( 16 ) ]

[node name="TestLevelManager" parent="." instance=ExtResource( 6 )]
levels = [ ExtResource( 18 ), ExtResource( 8 ), ExtResource( 49 ), ExtResource( 9 ) ]

[node name="MoodManager" parent="." instance=ExtResource( 5 )]
intro_song = ExtResource( 51 )
easy_battle_song = ExtResource( 54 )
hard_battle_song = ExtResource( 56 )
shelter_song = ExtResource( 50 )
victory_song = ExtResource( 55 )
[connection signal="retry_pressed" from="DeadPanel" to="." method="_on_DeadPanel_retry_pressed"]
